<resources>
    <string name="app_name">mobileAndroid_native</string>
    <string name="welcom_to_4in_shield">Welcom to 4IN Shield</string>
    <string name="bienvenuimage">bienvenuImage</string>
    <string name="start">Start</string>
    <string name="logoimage">logoimage</string>
    <string name="welcome_to_4in_shield_sign_in_to_continue">Welcome to 4In Shield! Sign in to continue</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="emailicone">emailIcone</string>
    <string name="sing_in_with_gmail">Sing in with Gmail</string>
    <string name="googleicone">googleIcone</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="facebookicone">facebookIcone</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="terms_and_conditions">terms and conditions</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="i_herby_accept">I herby accept</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="who_is_going_to_use_this_device">Who is going to use this device?</string>
    <string name="image">image</string>
    <string name="parents">Parents</string>
    <string name="child">Child</string>
    <string name="social_network_platform_drop_down">Social network platform (Drop down)</string>
    <string name="this_information_will_help_us_to_protect_your_child_from_online_abusive_content_and_cyberharassment">This information will help us to protect your child from online abusive content and cyberharassment</string>
    <string name="please_enter_your_child_s_social_media_account_information">Please enter your child’s social media account information</string>
    <string name="social_network_user_name">Social network user name</string>
    <string name="social_network_page_url">Social network page URL</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="gender">Gender</string>
    <string name="birth_date">Birth date</string>
    <string name="go_to_dashboard">Go to dashboard</string>
    <string name="thank_you_for_your_confidence_in_us">Thank you for your confidence in us.</string>
    <string name="please_add_your_child_s_devices">Please add your child’s devices</string>
    <string name="please_enter_the_required_information_to_complete_your_child_s_profile">Please enter the required information to complete your child’s profile</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="the_information_from_your_child_s_device_will_help_us_to_assess_their_mental_health_duration_of_sleep_places_visited_used_applications_etc_it_also_gives_you_the_ability_to_block_or_allow_installed_applications">The information from your child’s device will help us to assess their mental health, duration of sleep, places visited, used applications etc. It also gives you the ability to block or allow installed applications</string>
    <string name="please_follow_the_following_steps">Please follow the following steps:</string>
    <string name="_1_bring_your_child_s_mobile_phone">1. Bring your child’s mobile phone</string>
    <string name="_2_scan_this_qr_code_with_your_child_s_device_camera">2. Scan this QR code with your child’s device camera</string>
    <string name="_3_you_will_be_redirected_to_the_4in_shield_application_download_page">3. You will be redirected to the 4IN shield application download page</string>
    <string name="_4_once_the_application_is_installed_click_next">4. Once the application is installed, click Next</string>
    <string name="your_child_s_profile_information_has_been_successfully_added">Your child’s profile information has been successfully added</string>
    <string name="add_new_profile">Add new profile</string>
    <string name="continu">Continue</string>
    <string name="modify_profile_information">Modify profile information</string>
    <string name="you_have_successfully_completed_you_child_profile">You have successfully completed you child profile.</string>
    <string name="add_another_child">Add another child</string>
    <string name="no_account_sign_up">No account? Sign up</string>
    <string name="child_first_name">Child first name</string>
    <string name="first_name_last_name">First name Last name</string>
    <string name="age">AGE</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="device_usage">Device usage</string>
    <string name="_4h">4h</string>
    <string name="last_night_sleep_duration">Last night Sleep duration</string>
    <string name="_8h">8h</string>
    <string name="phone_call_duration">Phone call duration</string>
    <string name="danger_level">Danger Level</string>
    <string name="high">High</string>
    <string name="last_alerts">Last Alerts</string>
    <string name="toxic_comment">Toxic comment!</string>
    <string name="_12_34_pm">12:34 PM</string>
    <string name="sleep_depreviation">Sleep depreviation!</string>
    <string name="mama_always_said_life_was_like_a_box_of_chocolates_you_never_know_what">Mama always said life was like a box of chocolates. You never know what…</string>
    <string name="sleep_duration">Sleep Duration</string>
    <string name="you_don_t_understand_i_coulda_had_class_i_coulda_been_a_contender_i_could_ve">You don\'t understand! I coulda had class. I coulda been a contender. I could\'ve…</string>
    <string name="justin_holmes">Justin Holmes</string>
    <string name="rebecca_morgan">Rebecca Morgan</string>
    <string name="last_social_media_activites">Last social media activites</string>
    <string name="mental_state">Mental State</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="social_media">SOCIAL MEDIA</string>
    <string name="alerts">ALERTS</string>
    <string name="control">CONTROL</string>
    <string name="off">Off</string>
    <string name="camera">Camera</string>
    <string name="on">On</string>
    <string name="google_chrome">Google Chrome</string>
    <string name="parental_control">Parental Control</string>
</resources>