<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bleu"
    tools:context=".sign_in1"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="81dp"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:layout_marginTop="57dp"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/logoimage" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="220dp"
            android:layout_height="89dp"
            android:layout_marginStart="54dp"
            android:layout_marginTop="63dp"
            android:alpha="0.86"
            android:fontFamily="@font/abelregular"
            android:lineSpacingExtra="2sp"
            android:text="@string/welcome_to_4in_shield_sign_in_to_continue"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/abelregular"
                android:lineSpacingExtra="-3sp"
                android:text="@string/sign_in_with_email"
                android:textColor="@color/bleu"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="23dp"
                android:layout_height="22dp"
                android:layout_marginStart="-15dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/emailicone"
                tools:layout_marginBottom="13dp"
                android:contentDescription="@string/emailicone" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/start_icone"
                android:contentDescription="@string/start" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/abelregular"
                android:text="@string/sing_in_with_gmail"
                android:textColor="@color/bleu"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="23dp"
                android:layout_height="22dp"
                android:layout_marginStart="-15dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/googleicone"
                tools:layout_marginBottom="13dp"
                android:contentDescription="@string/googleicone" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/start_icone"
                android:contentDescription="@string/start"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/abelregular"
                android:text="@string/sign_in_with_facebook"
                android:textColor="@color/bleu"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="19dp"
                android:layout_height="28dp"
                android:layout_marginStart="-15dp"
                android:layout_marginTop="11dp"
                android:layout_weight="1"
                android:contentDescription="@string/facebookicone"
                app:srcCompat="@drawable/facebookicone"
                tools:layout_marginBottom="11dp" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/start_icone"
                android:contentDescription="@string/start"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginTop="41dp"
            android:alpha="0.86"
            android:fontFamily="@font/abelregular"
            android:text="@string/no_account_sign_up"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>