<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_in2"
    android:background="@color/bleu"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="81dp"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:layout_marginTop="57dp"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/logoimage" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="220dp"
            android:layout_height="89dp"
            android:layout_marginStart="54dp"
            android:layout_marginTop="63dp"
            android:alpha="0.86"
            android:fontFamily="@font/abelregular"
            android:lineSpacingExtra="2sp"
            android:text="@string/welcome_to_4in_shield_sign_in_to_continue"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/input_background"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:textColorHint="#B5AEAE"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/input_background"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:textColorHint="#B5AEAE"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry"
            android:autofillHints="" />

        <Button
            android:id="@+id/button2"
            android:layout_width="111dp"
            android:layout_height="50dp"
            android:layout_marginStart="141dp"
            android:layout_marginTop="43dp"
            android:drawableEnd="@drawable/start_icone"
            android:fontFamily="@font/abelregular"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/bleu"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:fontFamily="@font/poppinssemibold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginTop="41dp"
            android:alpha="0.86"
            android:fontFamily="@font/abelregular"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>