<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bleu"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
    tools:context=".add_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:layout_marginTop="32dp"
            app:srcCompat="@drawable/profileaddlogo" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="302dp"
            android:layout_height="69dp"
            android:layout_marginStart="44dp"
            android:alpha="0.86"
            android:fontFamily="@font/abelregular"
            android:text="@string/please_enter_your_child_s_social_media_account_information"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:alpha="0.86"
            android:text="@string/this_information_will_help_us_to_protect_your_child_from_online_abusive_content_and_cyberharassment"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="46dp"
            android:layout_marginBottom="39dp"
            android:autofillHints=""
            android:background="@drawable/input_background"
            android:ems="10"
            android:hint="@string/social_network_platform_drop_down"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:textColorHint="#B5AEAE"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="23dp"
            android:autofillHints=""
            android:background="@drawable/input_background"
            android:ems="10"
            android:hint="@string/social_network_user_name"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:textColorHint="#B5AEAE"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/input_background"
            android:ems="10"
            android:hint="@string/social_network_page_url"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:textColorHint="#B5AEAE"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="67dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="68dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="105dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/skip"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/bleu"
                android:textSize="18sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button3"
                android:layout_width="105dp"
                android:layout_height="50dp"
                android:layout_marginStart="45dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:drawableEnd="@drawable/start_icone"
                android:text="@string/next"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/bleu"
                android:textSize="18sp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>